[package]
name = "request-timeouts"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10.0", features = ["serde"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
log = "0.4.26"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.41" }
